<resources>
    <string name="app_name">I Love Youbike</string>

    <!--Action Menu Strings-->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">View on Map</string>
    <string name="action_share">Share</string>
    <string name="menu_sort_default">Sort by Default Order</string>
    <string name="menu_sort_location">Sort by Location</string>


    <!--Activity Titles-->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_details">Station Details</string>
    <string name="title_activity_maps">Station Map</string>


    <string name="sync_account_type" translatable="false">alexander.dmtaiwan.com</string>
    <string name="content_authority" translatable="false">com.dmtaiwan.alexander.iloveyoubike</string>

    <string name="text_view_station_detail_spaces_available">Spaces Available</string>
    <string name="text_view_station_detail_bikes_available">Bikes Available</string>
    <string name="text_view_station_detail_distance">Distance</string>
    <string name="text_view_station_detail_no_data">No Data</string>
    <string name="text_view_station_list_time_label">Last update:</string>
    <string name="text_view_station_detail_empty">No Location Data Available</string>
    
    <!--Empty View Strings-->
    <string name="text_view_empty_view">No Station Data</string>
    <string name="text_view_empty_view_server_down">No data available.  The server is not responding.</string>
    <string name="text_view_empty_view_server_invalid">No data available.  The server is returning invalid data.</string>
    <string name="text_view_empty_view_network">No data available.  The network is not available.</string>
    <string name="text_view_empty_view_favorites">No favorites have been selected yet!</string>


    <!--Shared Prefs -->
    <string name="pref_key_language" translatable="false">language</string>
    <string name="pref_language_label" translatable="false">Language</string>
    
    <string name="pref_language_label_english">English</string>
    <string name="pref_language_label_chinese">Chinese</string>
    
    <string name="pref_language_english" translatable="false">english</string>
    <string name="pref_language_chinese" translatable="false">chinese</string>

    <!--Transition Strings-->
    <string name="transition_status_iamge_view" translatable="false">status_image</string>
    <string name="transitoin_station_name_text" translatable="false">station_name</string>

    <!--Snackbar/Toast Strings-->
    <string name="snackbar_location">Please enable location services!</string>
    <string name="snackbar_action_settings">SETTINGS</string>

    <string name="snackbar_favorites">No favorites yet!</string>
    <string name="snackbar_action_list">ALL STATIONS</string>
    <string name="text_view_station_detail_district">District</string>

    <!--Map Strings-->
    <string name="marker_user_location">You are here!</string>
    <string name="snippet_string_bikes">Bikes:</string>
    <string name="snippet_string_spaces">Spaces:</string>

    <string-array name="main_list_items">
        <item>Favorite Stations</item>
        <item>Nearest Station</item>
        <item>All Stations</item>
        <item>View Stations on Map</item>
    </string-array>

    <string-array name="tab_titles">
        <item>Favorites</item>
        <item>Nearest</item>
        <item>All Stations</item>
        <item>Map</item>
    </string-array>

    <!--Share Intent Strings-->
    <string name="shareTextOne">There are</string>
    <string name="shareTextTwo">bikes available and</string>
    <string name="shareTextThree">spaces available at</string>
    <string name="shareTextFour">station as of</string>




    <string name="title_widget">I Love Youbike Favorite Stations Widget</string>



    <!--A11y strings-->
    <string name="a11y_status_icon">Status Icon</string>
    <string name="a11y_status_bikes">Status Icon Bikes Available</string>
    <string name="a11y_status_no_bikes">Status Icon No Bikes Available</string>
    <string name="a11y_status_no_spaces">Status Icon No Spaces Available</string>
    <string name="a11y_button_favorite">Favorite Button</string>
    <string name="a11y_button_map">View On Map Button</string>
</resources>
