<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/station_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/linear_layout_station_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingBottom="@dimen/action_bar_height">

            <android.support.v7.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <TextView
                android:id="@+id/text_view_station_detail_station_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginEnd="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginLeft="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginStart="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
                android:gravity="center_horizontal"
                android:textSize="@dimen/station_detail_station_text_size"
                android:transitionName="@string/transition_station_name_text"
                tools:text="Taipei City Hall Station (Exit 3)-3" />


            <ImageView
                android:id="@+id/image_view_station_detail_status"
                android:layout_width="@dimen/status_icon"
                android:layout_height="@dimen/status_icon"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:contentDescription="@string/a11y_status_icon"
                android:src="@drawable/ic_my_location_black_48dp"
                android:transitionName="@string/transition_status_image_view" />

            <TextView
                android:id="@+id/text_view_station_detail_district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
                android:gravity="center_horizontal"
                android:textSize="@dimen/station_detail_district_text_size"
                tools:text="station district" />


            <android.support.v7.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_station_body"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/action_bar_height">

            <android.support.v7.widget.GridLayout
                android:id="@+id/detail_additional_pane"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
                android:paddingEnd="@dimen/detail_station_horizontal_padding"
                android:paddingLeft="@dimen/detail_station_horizontal_padding"
                android:paddingRight="@dimen/detail_station_horizontal_padding"
                android:paddingStart="@dimen/detail_station_horizontal_padding"
                android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
                app:columnCount="2">


                <android.support.v7.widget.Space
                    app:layout_columnSpan="2"
                    app:layout_rowWeight="1" />


                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/text_view_station_detail_distance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/secondary_text_light_bg"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/text_view_station_detail_distance"
                    android:gravity="center_vertical|end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/theme_accent"
                    app:layout_gravity="fill"
                    tools:text="4.4km" />


                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/text_view_station_detail_bikes_available"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/secondary_text_light_bg"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/text_view_station_detail_bikes"
                    android:gravity="center_vertical|end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/theme_accent"
                    app:layout_gravity="fill"
                    tools:text="124" />


                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/text_view_station_detail_spaces_available"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/secondary_text_light_bg"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1" />

                <TextView
                    android:id="@+id/text_view_station_detail_spaces"
                    android:gravity="center_vertical|end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/theme_accent"
                    app:layout_gravity="fill"
                    tools:text="13" />


                <ImageButton
                    android:id="@+id/button_station_detail_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/a11y_button_favorite"
                    android:gravity="center_horizontal"
                    android:src="@drawable/ic_favorite_outline_grey600_48dp" />


                <ImageButton
                    android:id="@+id/button_station_detail_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/a11y_button_map"
                    android:gravity="center_horizontal"
                    android:src="@drawable/ic_map_black_48dp" />
            </android.support.v7.widget.GridLayout>


            <TextView
                android:id="@+id/text_view_station_detail_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/text_view_station_detail_empty"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>