<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_additional_pane"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingEnd="@dimen/detail_station_horizontal_padding"
    android:paddingLeft="@dimen/detail_station_horizontal_padding"
    android:paddingRight="@dimen/detail_station_horizontal_padding"
    android:paddingStart="@dimen/detail_station_horizontal_padding"
    android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
    app:columnCount="2">





        <TextView
            android:layout_height="wrap_content"
            android:text="@string/text_view_station_detail_distance"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/secondary_text_light_bg"
            android:gravity="center_vertical"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/text_view_station_detail_distance"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/theme_accent"
            android:gravity="center_vertical|right"
            app:layout_gravity="fill"
            tools:text="4.4km" />




        <TextView
            android:layout_height="wrap_content"
            android:text="@string/text_view_station_detail_bikes_available"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/secondary_text_light_bg"
            android:gravity="center_vertical"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/text_view_station_detail_bikes"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/theme_accent"
            android:gravity="center_vertical|right"
            app:layout_gravity="fill"
            tools:text="124" />



        <TextView
            android:layout_height="wrap_content"
            android:text="@string/text_view_station_detail_spaces_available"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/secondary_text_light_bg"
            android:gravity="center_vertical"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <TextView
            android:id="@+id/text_view_station_detail_spaces"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/theme_accent"
            android:gravity="center_vertical|right"
            app:layout_gravity="fill"
            tools:text="13" />



        <ImageButton
            android:id="@+id/button_station_detail_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_favorite_outline_grey600_48dp"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal"
            android:gravity="center_horizontal"
            app:layout_columnWeight="1"/>

</android.support.v7.widget.GridLayout>